tests/snapshots/yaml_suite_snapshots__yaml_suite_UGM3_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 2.27. Invoice
  from: "http://www.yaml.org/spec/1.2/spec.html#id2761823"
  tags: spec tag literal mapping sequence alias unknown-tag
  yaml: "--- !<tag:clarkevans.com,2002:invoice>\ninvoice: 34843\ndate   : 2001-01-23\nbill-to: &id001\n…"
  tree: "+STR\n +DOC ---\n  +MAP <tag:clarkevans.com,2002:invoice>\n   =VAL :invoice\n   =VAL :34843\n  …"
  json: "{\n  \"invoice\": 34843,\n  \"date\": \"2001-01-23\",\n  \"bill-to\": {\n    \"given\": \"Chris\",\n    \"fa…"
  dump: "--- !<tag:clarkevans.com,2002:invoice>\ninvoice: 34843\ndate: 2001-01-23\nbill-to: &id001\n  …"
