tests/snapshots/yaml_suite_snapshots__yaml_suite_UKK6_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: "@ingydotnet"
  name: Syntax character edge cases
  tags: edge empty-key
  tree: "+STR\n +DOC\n  +SEQ\n   +MAP\n    =VAL :\n    =VAL :\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- :\n"
- json: "{\n  \":\": null\n}\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL ::\n   =VAL :\n  -MAP\n -DOC\n-STR\n"
  yaml: "::\n"
- json: null
  tree: "+STR\n +DOC\n  =VAL <!> :\n -DOC\n-STR\n"
  yaml: "!\n"
