tests/snapshots/yaml_suite_snapshots__yaml_suite_UT92_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 9.4. Explicit Documents
  from: "http://www.yaml.org/spec/1.2/spec.html#id2801448"
  tags: flow spec header footer comment
  yaml: "---\n{ matches\n% : 20 }\n...\n---\n# Empty\n...\n"
  tree: "+STR\n +DOC ---\n  +MAP {}\n   =VAL :matches %\n   =VAL :20\n  -MAP\n -DOC ...\n +DOC ---\n  =VAL :\n -DOC ...\n-STR\n"
  json: "{\n  \"matches %\": 20\n}\nnull\n"
  dump: "---\nmatches %: 20\n...\n---\n...\n"
