tests/snapshots/yaml_suite_snapshots__yaml_suite_UT92_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\nmatches %: 20\n...\n---\n...\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2801448"
  json: "{\n  \"matches %\": 20\n}\nnull\n"
  name: Spec Example 9.4. Explicit Documents
  tags: flow spec header footer comment
  tree: "+STR\n +DOC ---\n  +MAP {}\n   =VAL :matches %\n   =VAL :20\n  -MAP\n -DOC ...\n +DOC ---\n  =VAL :\n -DOC ...\n-STR\n"
  yaml: "---\n{ matches\n% : 20 }\n...\n---\n# Empty\n...\n"
