tests/snapshots/yaml_suite_snapshots__yaml_suite_UV7Q_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Legal tab after indentation
  from: "@ingydotnet"
  tags: indent whitespace
  yaml: "x:\n - x\n  ——»x\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :x\n   +SEQ\n    =VAL :x x\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"x\": [\n    \"x x\"\n  ]\n}\n"
  dump: "x:\n- x x\n"
