tests/snapshots/yaml_suite_snapshots__yaml_suite_UV7Q_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "x:\n- x x\n"
  from: "@ingydotnet"
  json: "{\n  \"x\": [\n    \"x x\"\n  ]\n}\n"
  name: Legal tab after indentation
  tags: indent whitespace
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :x\n   +SEQ\n    =VAL :x x\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  yaml: "x:\n - x\n  ——»x\n"
